src/main/kotlin/com/example/hexagonal/global/error/exception/ErrorCode.kt
package com.example.hexagonal.global.error.exception

enum class ErrorCode(
    val status: Int,
    val message: String
) {
}